// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Task validatePackageJson with empty 1`] = `
"package.json has following errors
 must have required property 'name'
 must have required property 'version'
 must have required property 'description'
 must have required property 'module'
 must have required property 'typings'
 must have required property 'files'
 must have required property 'sideEffects'
 must have required property 'somod'"
`;

exports[`Test Task validatePackageJson with no sodaru module key 1`] = `
"package.json has following errors
 must have required property 'somod'"
`;

exports[`Test Task validatePackageJson with normal 1`] = `
"package.json has following errors
 must have required property 'module'
 must have required property 'typings'
 must have required property 'files'
 must have required property 'sideEffects'
 must have required property 'somod'"
`;

exports[`Test Task validatePackageJson with not-allowed keys 1`] = `
"package.json has following errors
 main must not exist
 jsnext:main must not exist
 type must not exist"
`;

exports[`Test Task validatePackageJson with with somod 1`] = `undefined`;

exports[`Test Task validatePackageJson with with somodPlugins 1`] = `undefined`;

exports[`Test Task validatePackageJson with with wrong somodPlugin name 1`] = `
"package.json has following errors
 somodPlugins.0 must be a valid plugin package name"
`;

exports[`Test Task validatePackageJson with with wrong somodPlugins 1`] = `
"package.json has following errors
 somodPlugins must be array of plugin package names"
`;

exports[`Test Task validatePackageJson with wrong files 1`] = `
"package.json has following errors
 files must contain build"
`;

exports[`Test Task validatePackageJson with wrong module 1`] = `
"package.json has following errors
 module must be build/lib/index.js"
`;

exports[`Test Task validatePackageJson with wrong sideEffects 1`] = `
"package.json has following errors
 sideEffects must be false"
`;

exports[`Test Task validatePackageJson with wrong typings 1`] = `
"package.json has following errors
 typings must be build/lib/index.d.ts"
`;
